--- a/src/components/Project_Container/Project_Container.css
+++ b/src/components/Project_Container/Project_Container.css
@@ -1,7 +1,11 @@
+
 .p_container{
+    width: 80%; 
+    margin: 50px auto;
     display: grid;
-    position: relative;
-    width: 100%;
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(auto-fill, minmax(100px, 1fr));
+    gap: 20px;
     opacity: 0;
     transition: opacity 0.5s linear 1s;
 }
@@ -10,19 +14,151 @@
     opacity: 1;
 }
 .p_container.item {
-    position: absolute;
-    display: block;
-    padding: 0;
-    margin: 10px;
-    width: calc(33.333333% - 20px);
+    grid-row: auto;
+    grid-column: auto;
 }
 
-.p_container.item-content {
-    position: relative;
-}
-
-.p_container.item img {
-    width: 100%;
+.item-content>img {
     cursor: pointer;
-    vertical-align: top;
+    width: 80%;
+    height: 90%;
+    object-fit:cover;
+    border-radius: 20px;
+    overflow: hidden;
+    -webkit-box-shadow: -13px 13px 13px -7px rgba(48,51,48,1);
+    -moz-box-shadow: -13px 13px 13px -7px rgba(48,51,48,1);
+    box-shadow: -13px 13px 13px -7px rgba(48,51,48,1);
+}
+.pagination{
+    display: flex;
+    place-items: center;
+    justify-content: center;
+    gap: 10px;
+}
+.pagination :active:not([disabled]){ 
+    transform: scale(0.97);
+}
+.pagination :disabled{
+    background-color: gray;
+    opacity: .6;
+    cursor:default;
+}
+/*------------> Next, Prev button*/
+
+.paginationStepBtn {
+    font-weight: bold;
+    color: white;
+    border-radius: 2rem;
+    width: 95.02px;
+    height: 42.66px;
+    border: none;
+    background-color: #3653F8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+}
+
+.paginationStepBtn .span-mother {
+display: flex;
+overflow: hidden;
+
+}
+
+.paginationStepBtn:hover .span-mother {
+position: absolute;
+}
+
+.pagination :not([disabled]).paginationStepBtn:hover .span-mother span {
+transform: translateY(1.2em);
+}
+
+.pagination :not([disabled]).paginationStepBtn .span-mother span:nth-child(1) {
+transition: .2s;
+}
+
+.pagination :not([disabled]).paginationStepBtn .span-mother span:nth-child(2) {
+transition: .3s;
+}
+
+.pagination :not([disabled]).paginationStepBtn .span-mother span:nth-child(3) {
+transition: .4s;
+}
+
+.pagination :not([disabled]).paginationStepBtn .span-mother span:nth-child(4) {
+transition: .5s;
+}
+
+.pagination :not([disabled]).paginationStepBtn .span-mother span:nth-child(5) {
+transition: .6s;
+}
+
+.pagination :not([disabled]).paginationStepBtn .span-mother span:nth-child(6) {
+transition: .7s;
+}
+
+.paginationStepBtn .span-mother2 {
+display: flex;
+position: absolute;
+overflow: hidden;
+}
+
+.pagination :not([disabled]).paginationStepBtn .span-mother2 span {
+transform: translateY(-1.2em);
+}
+
+.pagination :not([disabled]).paginationStepBtn:hover .span-mother2 span {
+transform: translateY(0);
+}
+
+.pagination :not([disabled]).paginationStepBtn .span-mother2 span {
+transition: .2s;
+}
+
+.pagination :not([disabled]).paginationStepBtn .span-mother2 span:nth-child(2) {
+transition: .3s;
+}
+
+.pagination :not([disabled]).paginationStepBtn .span-mother2 span:nth-child(3) {
+transition: .4s;
+}
+
+.pagination :not([disabled]).paginationStepBtn .span-mother2 span:nth-child(4) {
+transition: .5s;
+}
+
+.pagination :not([disabled]).paginationStepBtn .span-mother2 span:nth-child(5) {
+transition: .6s;
+}
+
+.pagination :not([disabled]).paginationStepBtn .span-mother2 span:nth-child(6) {
+transition: .7s;
+}
+/* Next, Prev button <------------------------------*/
+
+.paginationNumberBtn{
+    margin: 0 5px;
+    width: 20px;
+    height: 20px;
+    text-align: center;
+    border-radius: 50%;
+    border: none;
+    
+}
+.active {
+    transform: scale(1.7);
+    background-color: #3653F8;
+    font-weight: bold;
+    color: white;
+    transition: all .3s linear;
+    align-items: center;
+}
+.inactive{
+    display: none;
+}
+@media (max-width: 768px) {
+    .p_container{ 
+      grid-template-columns: repeat(2, 1fr); /* Cambiar el número de columnas */
+      grid-template-rows: repeat(2, minmax(150px, 1fr)); /* Cambiar el número de filas */
+    }
 }
