--- a/src/components/Project_Container/Project_Container.css
+++ b/src/components/Project_Container/Project_Container.css
@@ -22,7 +22,8 @@
     cursor: pointer;
     width: 80%;
     height: 90%;
-    min-width: 150px;
+    min-width: 190px;
+    min-height: 262px;
     object-fit:cover;
     border-radius: 20px;
     overflow: hidden;
