--- a/src/components/Project_Container/Project_Container.css
+++ b/src/components/Project_Container/Project_Container.css
@@ -13,25 +13,29 @@
 .p_container.imgs-charge {
     opacity: 1;
 }
-.p_container.item {
+/* .p_container.item {
     grid-row: auto;
     grid-column: auto;
 }
-
+.item-content{
+    position: relative;
+    overflow: hidden;
+    border-radius: 20px;
+}
 .item-content>img {
     cursor: pointer;
-    width: 80%;
+    width: 100%;
     height: 90%;
     min-width: 190px;
     min-height: 262px;
     object-fit:cover;
-    border-radius: 20px;
     overflow: hidden;
     -webkit-box-shadow: -13px 13px 13px -7px rgba(48,51,48,1);
     -moz-box-shadow: -13px 13px 13px -7px rgba(48,51,48,1);
     box-shadow: -13px 13px 13px -7px rgba(48,51,48,1);
     transition:  all linear 2s;
-}
+} */
+
 .pagination{
     display: grid;
     grid-template-areas: 
